@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+Simon S100 Socket iO
+https://products.z-wavealliance.org/products/1869
+-->
 <Product xmlns='http://code.google.com/p/open-zwave/'>
     <!-- COMMAND_CLASS_SWITCH_MULTILEVEL. This class is in the list reported by the device, but it does not respond to requests -->
     <CommandClass id="38" getsupported="false"/>
